[package]
name = "tree-sitter-abs"
description = "ABS is a language for Abstract Behavioral Specification, which combines implementation-level specifications with verifiability, high-level design with executablity, and formal semantics with practical usability. ABS is a concurrent, object-oriented, modeling language that features functional data-types."
version = "0.1.0"
authors = [" "]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "abs"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/abstools/abstools"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
